# macro-egs

./: Cargo.toml  README.md
decorator/: Cargo.toml
decorator/src/: lib.rs
examples/: decorator-eg.rs
