[package]
name = "decorator"
version = "0.1.0"
authors = ["Chen Weiguang <chen.weiguang@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
proc-macro2 = "1.0.12"
quote = "1.0.4"
syn = { version = "1.0.18", features = ["full"] }

[lib]
proc-macro = true
